# openapi/swagger.yaml
@@ -54,6 +54,14 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/point"
+      countFarm:
+        type: number
+        format: integer
+        description: Ship count
+      farms:
+        type: array
+        items:
+          $ref: "#/definitions/point"
 
   point:
     type: object
